<resources>
    <string name="app_name">My Application</string>
    <string name="za_warudo">Za Warudo!</string>
    <string name="peso">Peso</string>
    <string name="altura">Altura:</string>
    <string name="peso1">Peso:</string>
    <string name="calcular">Calcular</string>
    <string name="limpar">Limpar</string>
    <string name="imc">IMC:</string>
    <string name="peso_em_kg">Peso em KG</string>
    <string name="altura_em_m">Altura em m</string>
    <string name="_0_0">0.0</string>
    <string name="idade">Idade</string>
    <string name="tmb">TMB:</string>
    <string name="tmb_0_0">0.0</string>
    <string name="idade_em_anos">Idade em anos</string>
    <string name="condi_o">Condição:</string>
    <string name="altura_error">Altura deve ser preenchida</string>
    <string name="peso_error">Peso deve ser preenchido</string>
    <string name="idade_error">Idade deve ser preenchida</string>
    <string name="abaixo_peso">Abaixo do peso</string>
    <string name="peso_normal">Peso normal</string>
    <string name="sobrepeso">Sobrepeso</string>
    <string name="obesidade_grau_1">Obesidade Grau I</string>
    <string name="obesidade_grau_2">Obesidade Grau II</string>
    <string name="obesidade_grau_3">Obesidade Grau III</string>
    <string name="condicao_label">Condição: %s</string>
    <string name="bot_o_para_calcular_o_imc">Botão para calcular o IMC</string>
</resources>